--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     <com.dmitrybrant.android.multitouch.MultiTouchCanvas
@@ -10,22 +9,19 @@
         android:id="@+id/txtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
         android:background="#50000000"
-        android:padding="4dp" />
+        android:padding="8dp" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:orientation="vertical" >
-
         <Button
             android:id="@+id/btnAbout"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:text="About..." />
-
+            android:text="@string/about" />
     </LinearLayout>
 </FrameLayout>
