Update SDK, and refactor a bit.

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     <com.dmitrybrant.android.multitouch.MultiTouchCanvas
+        android:id="@+id/multiTouchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <TextView
@@ -11,17 +13,11 @@
         android:layout_height="wrap_content"
         android:background="#50000000"
         android:padding="8dp" />
-    <LinearLayout
+    <Button
+        android:id="@+id/btnAbout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:orientation="vertical" >
-        <Button
-            android:id="@+id/btnAbout"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/about" />
-    </LinearLayout>
+        style="?android:attr/buttonStyleSmall"
+        android:text="@string/about" />
 </FrameLayout>
